--- a/assets/scss/helper/_about.scss
+++ b/assets/scss/helper/_about.scss
@@ -5,6 +5,9 @@
                 margin-bottom: 20px;
             }
         }
+        h2{
+            color: $ash;
+        }
         h4{
             font-family: $roboto;
             font-weight: $med;
